--- a/index.html
+++ b/index.html
@@ -68,18 +68,19 @@
 				</div>
 				<div class="text-container">
 					<div class="text-content">
-						<h2>Stay productive, wherever you are</h2>
-						<p>
+						<h3>Stay productive, wherever you are</h3>
+						<p class="productivity">
 							Never let location be an issue when accessing your files. Fylo has
 							you covered for all of your file storage needs.
 						</p>
-						<p>
+						<p class="productivity">
 							Securely share files and folders with friends, family and
 							colleagues for live collaboration. No email attachments required!
 						</p>
 					</div>
-					<a href=""
-						>See how Fylo works <img src="./images/icon-arrow.svg" alt="arrow"
+					<a href="#"
+						>See how Fylo works
+						<img src="./images/icon-arrow.svg" alt="arrow" class="arrow"
 					/></a>
 					<blockquote>
 						<img src="./images/icon-quotes.svg" alt="quotemarks" />
@@ -99,7 +100,7 @@
 				</div>
 			</section>
 			<section class="cta">
-				<h2>Get early access today</h2>
+				<h3>Get early access today</h3>
 				<p>
 					It only takes a minute to sign up and our free starter tier is
 					extremely generous. If you have any questions, our support team would
