--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					/></a>
 					<blockquote>
 						<img src="./images/icon-quotes.svg" alt="quotemarks" />
-						<p>
+						<p class="quote">
 							Fylo has improved our team productivity by an order of magnitude.
 							Since making the switch our team has become a well-oiled
 							collaboration machine.
