finish styles for testimonial section and add start on cta section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							colleagues for live collaboration. No email attachments required!
 						</p>
 					</div>
-					<a href="#"
+					<a href="#" class="see-how"
 						>See how Fylo works
 						<img src="./images/icon-arrow.svg" alt="arrow" class="arrow"
 					/></a>
