--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					be happy to help you.
 				</p>
 				<form action>
-					<input type="text" />
+					<input type="text" placeholder="email@example.com" />
 					<button id="button-cta" class="button">Get Started For Free</button>
 				</form>
 			</section>
