add styles to footer section and alter color of logo for footer

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 			<nav class="primary">
 				<ul>
 					<li>
-						<a href="">Features</a><a href="">Team </a><a href="">Sign In</a>
+						<a href="">Features</a>
 					</li>
+					<li><a href="">Team </a></li>
+					<li><a href="">Sign In</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -113,7 +115,7 @@
 			</section>
 		</main>
 		<footer>
-			<div class="logo"><img src="./images/logo.svg" alt="" /></div>
+			<div class="logo"><img src="./images/logo-footer.svg" alt="" /></div>
 			<div class="contact">
 				<div class="phone">
 					<img src="./images/icon-phone.svg" alt="" />
@@ -124,13 +126,20 @@
 					<p>example@fylo.com</p>
 				</div>
 			</div>
-			<ul>
+			<ul class="list-1">
 				<li>
-					<a href="#">About Us</a><a href="#">Jobs</a><a href="#">Press</a
-					><a href="#">Blog</a><a href="#">Contact Us</a><a href="#">Terms</a
-					><a href="#">Privacy</a>
+					<a href="#">About Us</a>
 				</li>
+				<li><a href="#">Jobs</a></li>
+				<li><a href="#">Press</a></li>
+				<li><a href="#">Blog</a></li>
 			</ul>
+			<ul class="list-2">
+				<li><a href="#">Contact Us</a></li>
+				<li><a href="#">Terms</a></li>
+				<li><a href="#">Privacy</a></li>
+			</ul>
+			<div class="socials"><img src="./images/" alt="" /></div>
 		</footer>
 
 		<div class="attribution">
