add in link for Font Awesome icons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
 		<link rel="stylesheet" href="reset.css" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
@@ -37,6 +41,7 @@
 				</ul>
 			</nav>
 		</header>
+		<i class="fa fa-car" style="font-size: 60px; color: red"></i>
 		<main class="container">
 			<section class="hero">
 				<div class="img-container">
@@ -139,7 +144,12 @@
 				<li><a href="#">Terms</a></li>
 				<li><a href="#">Privacy</a></li>
 			</ul>
-			<div class="socials"><img src="./images/" alt="" /></div>
+			<div class="socials">
+				<span class="fa-stack fa-lg">
+					<i class="fa fa-circle-thin fa-stack-2x"></i>
+					<i class="fa fa-twitter fa-stack-1x"></i>
+				</span>
+			</div>
 		</footer>
 
 		<div class="attribution">
